Wed Jan 08 16:48:28 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/templates/CIAO_Glue_Session_Template.h: Added the complete
	  list of operations that needs to be supported.  Next up, the
	  implementation templates.

	* ciao/Active_Objref_Map.cpp:
	* ciao/Active_Objref_Map.h: Defined a typedef called
	  CIAO::Active_Objref_Map for managing CORBA::Object_var's using
	  the ACE_Active_Map_Manager and instantiate the template.

	* ciao/Cookies.cpp:
	* ciao/Cookies.h: Added insertion/extraction of
	  ACE_Active_Map_Manager_Key operations.

Tue Jan 07 23:28:28 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ciao/CIAO_common.h: Added a new file to collect common CIAO
	  macros.

	* ciao/CIAO_Component_i.cpp:
	* ciao/CIAO_Component_i.h: Removed.
	* ciao/Client_init.cpp:
	* ciao/Client_init.h:  The old CIAO_client_init in
	  CIAO_Component_i is now called Client_init under CIAO namespace.
	  This function initlializes the value factories for client side ORB.

	* ciao/Server_init.cpp:
	* ciao/Server_init.h: Added new function Server_init under CIAO
	  namespace to initialize server side value factories for server
	  side ORB.

	* ciao/Cookies.cpp:
	* ciao/Cookies.h:
	* ciao/Cookies.inl: Added server-side implementation of
	  Components::Cookie called CIAO::Map_Key_Cookie.  This
	  implementation is only used within the containers (i.e., server
	  side).  Client doesn't need to know how to interpret a Cookie.

	* ciao/Container_Base.h:
	* ciao/HomeRegistrar_i.h: Fixed various ACE-guideline conformity
	  problems.

	* ciao/CCM_Core.mpc:
	* ciao/CIAO_Client.dsp:
	* ciao/CIAO_Container.dsp:
	* ciao/CIAO_Server.dsp:
	* ciao/Makefile.client:
	* ciao/Makefile.container:
	* ciao/Makefile.server: Updated various makefiles/projects.

Tue Jan 07 07:48:02 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ciao/Container_Base.cpp (install_servant): Changed to decrease
	  the refcount of servant by one to make sure servants get
	  "released" properly.
