@@ -1,0 +1,13 @@
+// $Id$
+
+//    The generated filename for files using this template shoule be
+//       [idl-basename]GS.cpp       GS --> GlueSession
+
+// @@ Notice: [ciao module name] can expand to either CIAO_GLUE or
+//    CIAO_GLUE_[module name] as defined in the header file.
+
+#include "[idl-basename]GS.h"
+
+#if !defined (__ACE_INLINE__)
+# include "[idl-basename]GS.inl"
+#endif /* __ACE_INLINE__ */
