@@ -1,3 +1,12 @@
+Thu Jan 09 00:57:37 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
+
+	* docs/templates/cidl_template.cidl: Added an example CIDL file.
+
+	* docs/templates/CIAO_Glue_Session_Template.h:
+	* docs/templates/CIAO_Glue_Session_Template.inl:
+	* docs/templates/CIAO_Glue_Session_Template.cpp: Added more
+	  implementation code.
+
 Wed Jan 08 16:48:28 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
 
 	* docs/templates/CIAO_Glue_Session_Template.h: Added the complete
